Fixed navbar size on mobile, fixed shadows in dark mode

--- a/css/dark.css
+++ b/css/dark.css
@@ -19,6 +19,10 @@
     background-color: #2a2a2a;
 }
 
+.fa-bars {
+    color: lightgray;
+}
+
 nav .navbar-nav li a {
     color: lightgray;
 }
